--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@
                                         </div>
                                         <p><strong>Fiona
                                                 Leibundgut</strong><br>(she/her)<br>
+                                                Digital Sustainability Advisor<br>
                                             <a href="https://sparkitconsulting.ch/">SparkIT</a><br>
                                             <a href="https://www.linkedin.com/in/fleibundgut/">LinkedIn</a>
                                         </p>
@@ -461,6 +462,7 @@
                                         <p><strong>Ken
                                                 Iseli</strong><br>
                                             (he/him)<br>
+                                            Head of IT Service Delivery<br>
                                             <a href="https://climeworks.com/">Climeworks</a><br>
                                             <a href="https://www.linkedin.com/in/ken-iseli/">LinkedIn</a>
                                         </p>
@@ -479,6 +481,7 @@
                                         </div>
                                         <p><strong>Panu Kärävä</strong> <br>
                                             (he/him)<br>
+                                            Sustainability and ESG Advisor<br>
                                             <a href="https://inclus.com/en/">Inclus</a><br>
                                             <a href="https://www.linkedin.com/in/panu-karava/">LinkedIn</a>
                                         </p>
@@ -491,6 +494,7 @@
                                         </div>
                                         <p><strong>Andy Mossop</strong><br>
                                             (he/him)<br>
+                                            Digital Sustainability Product Owner<br>
                                             <a href="https://www.roche.com">Roche</a><br>
                                             <a href="https://www.linkedin.com/in/andrew-mossop/">LinkedIn</a>
                                         </p>
@@ -509,6 +513,7 @@
                                         </div>
                                         <p><strong>Christian Abegg</strong> <br>
                                             (he/him)<br>
+                                            Lead Cloud Architect<br>
                                             <a href="https://www.zuehlke.com">Zühlke</a><br>
                                             <a
                                                 href="https://www.linkedin.com/in/christian-abegg-851681214/">LinkedIn</a>
