--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <link media="all" href="./index_files/autoptimize_650efeacef646c97e8432d40eeda7285.css" rel="stylesheet">
-    <title>About - ClimateAction.Tech</title>
+    <title>Zürich Hackathon - ClimateAction.Tech</title>
     <link rel="canonical" href="https://climateaction.tech/about/">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="article">
