remove unused content

--- a/index.html
+++ b/index.html
@@ -36,19 +36,8 @@
     id="neve_body">
     <div class="wrapper">
         <header class="header">
-            <a class="neve-skip-link show-on-focus" href="https://climateaction.tech/about/#content">
-                Skip to content </a>
             <div id="header-grid" class="hfg_header site-header">
-                <div class="header--row header-top hide-on-mobile hide-on-tablet layout-full-contained header--row"
-                    data-row-id="top" data-show-on="desktop">
-                    <div class="header--row-inner header-top-inner">
-                        <div class="container">
-                            <div class="row row--wrapper" data-section="hfg_header_layout_top">
-                                <div class="hfg-slot left"></div>
-                                <div class="hfg-slot right"></div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="header--row header-top hide-on-mobile hide-on-tablet layout-full-contained header--row">
                 </div>
                 <nav class="header--row header-main hide-on-mobile hide-on-tablet layout-full-contained nv-navbar header--row"
                     data-row-id="main" data-show-on="desktop">
@@ -60,60 +49,15 @@
                                         <div class="item--inner builder-item--logo" data-section="title_tagline"
                                             data-item-id="logo">
                                             <div class="site-logo">
-                                                <a class="brand" href="https://climateaction.tech/"
-                                                    title="← ClimateAction.Tech" aria-label="ClimateAction.Tech"
-                                                    rel="home"><img width="83" height="33"
+                                                <img width="83" height="33"
                                                         src="./index_files/CAT-logo-stacked.svg"
                                                         class="neve-site-logo skip-lazy" alt="" decoding="async"
-                                                        data-variant="logo"></a>
+                                                        data-variant="logo">
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="hfg-slot right"></div>
-                            </div>
-                        </div>
-                    </div>
-                </nav>
-                <nav class="header--row header-main hide-on-desktop layout-full-contained nv-navbar header--row"
-                    data-row-id="main" data-show-on="mobile">
-                    <div class="header--row-inner header-main-inner">
-                        <div class="container">
-                            <div class="row row--wrapper" data-section="hfg_header_layout_main">
-                                <div class="hfg-slot left">
-                                    <div class="builder-item mobile-left tablet-left">
-                                        <div class="item--inner builder-item--logo" data-section="title_tagline"
-                                            data-item-id="logo">
-                                            <div class="site-logo">
-                                                <a class="brand" href="https://climateaction.tech/"
-                                                    title="← ClimateAction.Tech" aria-label="ClimateAction.Tech"
-                                                    rel="home"><img width="83" height="33"
-                                                        src="./index_files/CAT-logo-stacked.svg"
-                                                        class="neve-site-logo skip-lazy" alt="" decoding="async"
-                                                        data-variant="logo"></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="hfg-slot right">
-                                    <div class="builder-item tablet-left mobile-left">
-                                        <div class="item--inner builder-item--nav-icon" data-section="header_menu_icon"
-                                            data-item-id="nav-icon">
-                                            <div class="menu-mobile-toggle item-button navbar-toggle-wrapper">
-                                                <button type="button" class=" navbar-toggle" value="Navigation Menu"
-                                                    aria-label="Navigation Menu " aria-expanded="false"
-                                                    onclick="if (!window.__cfRLUnblockHandlers) return false; if(&#39;undefined&#39; !== typeof toggleAriaClick ) { toggleAriaClick() }">
-                                                    <span class="bars">
-                                                        <span class="icon-bar"></span>
-                                                        <span class="icon-bar"></span>
-                                                        <span class="icon-bar"></span>
-                                                    </span>
-                                                    <span class="screen-reader-text">Navigation Menu</span>
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
