no console errors

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         id="neve_body">
 <div class="wrapper">
     <div id="header-grid" class="hfg_header site-header">
-        <nav class="header--row header-main hide-on-mobile hide-on-tablet layout-full-contained nv-navbar header--row"
+        <div class="header--row header-main hide-on-mobile hide-on-tablet layout-full-contained nv-navbar header--row"
              data-row-id="main" data-show-on="desktop">
             <div class="header--row-inner header-main-inner">
                 <div class="container">
@@ -56,8 +56,8 @@
                     </div>
                 </div>
             </div>
-        </nav>
-        <nav class="header--row header-main hide-on-desktop layout-full-contained nv-navbar header--row"
+        </div>
+        <div class="header--row header-main hide-on-desktop layout-full-contained nv-navbar header--row"
              data-row-id="main" data-show-on="mobile">
             <div class="header--row-inner header-main-inner">
                 <div class="container">
@@ -75,7 +75,7 @@
                     </div>
                 </div>
             </div>
-        </nav>
+        </div>
     </div>
     <main id="content" class="neve-main">
         <div class="container single-page-container">
@@ -421,101 +421,6 @@
                                         <div class="widget-area">
                                             <div id="cnss_widget-2" class="widget widget_cnss_widget">
                                                 <p class="widget-title">Social media</p>
-                                                <ul id="" class="cnss-social-icon " style="text-align:left;">
-                                                    <li class="cn-fa-linkedin cn-fa-icon "
-                                                        style="display:inline-block;"><a class="" target="_blank"
-                                                                                         href="https://www.linkedin.com/company/climateactiontech/"
-                                                                                         title="linkedin"
-                                                                                         style="width:42px;height:42px;padding:7px 0;margin:2px;color: #ffffff;border-radius: 0%;"><i
-                                                            title="linkedin" style="font-size:28px;"
-                                                            class="fab fa-linkedin"></i></a></li>
-                                                    <li class="cn-fa-youtube cn-fa-icon "
-                                                        style="display:inline-block;"><a class="" target="_blank"
-                                                                                         href="https://www.youtube.com/channel/UCbGj6AM6oTSxqBlhMQlaplw"
-                                                                                         title="YouTube"
-                                                                                         style="width:42px;height:42px;padding:7px 0;margin:2px;color: #ffffff;border-radius: 0%;"><i
-                                                            title="YouTube" style="font-size:28px;"
-                                                            class="fab fa-youtube"></i></a></li>
-                                                </ul>
-                                            </div>
-                                            <div id="custom_html-10" class="widget_text widget widget_custom_html">
-                                                <div class="textwidget custom-html-widget">
-                                                    <div id="wcb" class="carbonbadge">
-                                                        <style>
-                                                            #wcb {
-                                                                --b1: #0e11a8;
-                                                                --b2: #00ffbc;
-                                                                font-size: 15px;
-                                                                text-align: center;
-                                                                color: var(--b1)
-                                                            }
-
-                                                            #wcb sub {
-                                                                vertical-align: middle;
-                                                                position: relative;
-                                                                top: .3em;
-                                                                font-size: .7em
-                                                            }
-
-                                                            #wcb_2,
-                                                            #wcb_a,
-                                                            #wcb_g {
-                                                                display: inline-flex;
-                                                                justify-content: center;
-                                                                align-items: center;
-                                                                text-align: center;
-                                                                font-size: 1em;
-                                                                line-height: 1.15;
-                                                                font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-                                                                text-decoration: none;
-                                                                margin: .2em 0
-                                                            }
-
-                                                            #wcb_a,
-                                                            #wcb_g {
-                                                                padding: .3em .5em;
-                                                                border: .13em solid var(--b2)
-                                                            }
-
-                                                            #wcb_g {
-                                                                border-radius: .3em 0 0 .3em;
-                                                                background: #fff;
-                                                                border-right: 0;
-                                                                min-width: 8.2em
-                                                            }
-
-                                                            #wcb_a {
-                                                                border-radius: 0 .3em .3em 0;
-                                                                border-left: 0;
-                                                                background: var(--b1);
-                                                                color: #fff;
-                                                                font-weight: 700;
-                                                                border-color: var(--b1)
-                                                            }
-
-                                                            .wcb-d #wcb_a {
-                                                                color: var(--b1);
-                                                                background: var(--b2);
-                                                                border-color: var(--b2)
-                                                            }
-
-                                                            .wcb-d #wcb_2 {
-                                                                color: #fff
-                                                            }
-                                                        </style>
-                                                        <div id="wcb_p"><span id="wcb_g">0.07g of
-                                                                    CO<sub>2</sub>/view</span><a id="wcb_a"
-                                                                                                 target="_blank"
-                                                                                                 rel="noopener"
-                                                                                                 href="https://websitecarbon.com/">Website
-                                                            Carbon</a>
-                                                        </div>
-                                                        <span id="wcb_2">&nbsp;Cleaner than 93% of pages
-                                                                tested</span>
-                                                    </div>
-                                                    <script src="./index_files/b.min.js.download" defer=""
-                                                            type="text/javascript"></script>
-                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -550,7 +455,6 @@
         </div>
     </footer>
 </div>
-<script async="" defer="" src="./index_files/hello.js.download" type="text/javascript"></script>
 <style id="core-block-supports-inline-css" type="text/css">
     .wp-container-3.wp-container-3,
     .wp-container-6.wp-container-6,
