add about section

--- a/index.html
+++ b/index.html
@@ -113,6 +113,35 @@
                         </div>
 
 
+                        <h2 class="wp-block-heading has-text-color" style="color:#004880">About</h2>
+
+
+                        <div id="wp-block-themeisle-blocks-advanced-columns-a5014ab42" class="wp-block-themeisle-blocks-advanced-columns has-4-columns has-desktop-equal-layout has-tablet-equal-layout has-mobile-collapsedRows-layout has-vertical-unset"><div class="wp-block-themeisle-blocks-advanced-columns-overlay"></div><div class="innerblocks-wrap">
+                            <div id="wp-block-themeisle-blocks-advanced-column-5853a49d2" class="wp-block-themeisle-blocks-advanced-column">
+                                <h4 class="wp-block-heading has-text-align-center pt-0 has-neve-link-color-color has-text-color"><strong>What to expect?</strong></h4>
+                                <p class="has-text-align-center">Get ready for a day of innovation and collaboration! Join us for a hackathon filled with challenges, creative solutions, and networking opportunities. And that's not all – stick around until the end to hear the announcement of the winners and enjoy a delightful apero with fellow participants.
+                                </p>
+                            </div>
+                            <div id="wp-block-themeisle-blocks-advanced-column-2b320bfc2" class="wp-block-themeisle-blocks-advanced-column">
+                                <h4 class="wp-block-heading has-text-align-center pt-0 has-neve-link-color-color has-text-color"><strong>Expected to code?</strong></h4>
+                                <p class="has-text-align-center">While coding skills are valuable, they're not the only thing that matters here. We encourage participants from all backgrounds to join us – whether you're a developer, designer, business strategist, or simply someone with a keen interest in sustainability. Teams will benefit from diverse skill sets, so don't hesitate to join us!
+                                </p>
+                            </div>
+                            <div id="wp-block-themeisle-blocks-advanced-column-6bb25b4a2" class="wp-block-themeisle-blocks-advanced-column">
+                                <h4 class="wp-block-heading has-text-align-center pt-0 has-neve-link-color-color has-text-color"><strong>Who should attend?</strong></h4>
+                                <p class="has-text-align-center">Whether you're a seasoned coder or a newcomer to the world of technology, our hackathon welcomes everyone! Both students and professionals. If you're passionate about making a difference and ready to dive into the world of sustainable solutions, this event is perfect for you. Join as an individual or gather a team of 3-5 people for an unforgettable experience.
+                                </p>
+                            </div>
+                            <div id="wp-block-themeisle-blocks-advanced-column-14d989512" class="wp-block-themeisle-blocks-advanced-column">
+                                <h4 class="wp-block-heading has-text-align-center pt-0 has-neve-link-color-color has-text-color"><strong>Why should you spend a day with us?</strong></h4>
+                                <p class="has-text-align-center">Immerse yourself in a day of innovation and problem-solving.
+                                    Network with like-minded individuals and industry experts.
+                                    Have the chance to win exciting prizes.
+                                    Learn, collaborate, and make a positive impact on the planet.</p>
+                            </div>
+                        </div></div>
+
+
 
                         <h2 class="wp-block-heading has-text-color" style="color:#004880">Challenges</h2>
 
