--- a/index.html
+++ b/index.html
@@ -599,17 +599,7 @@ window.addEventListener('LazyLoad::Initialized', function (e) {
         a = '<div class="play"></div>';
     return t.replace("ID", e) + a
 }
-
-function lazyLoadYoutubeIframe() {
-    var e = document.createElement("iframe"), t = "ID?autoplay=1";
-    t += 0 === this.dataset.query.length ? '' : '&' + this.dataset.query;
-    e.setAttribute("src", t.replace("ID", this.dataset.src)), e.setAttribute("frameborder", "0"), e.setAttribute("allowfullscreen", "1"), e.setAttribute("allow", "accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"), this.parentNode.replaceChild(e, this)
-}
-
-document.addEventListener("DOMContentLoaded", function () {
-    var e, t, a = document.getElementsByClassName("rll-youtube-player");
-    for (t = 0; t < a.length; t++) e = document.createElement("div"), e.setAttribute("data-id", a[t].dataset.id), e.setAttribute("data-query", a[t].dataset.query), e.setAttribute("data-src", a[t].dataset.src), e.innerHTML = lazyLoadThumb(a[t].dataset.id), e.onclick = lazyLoadYoutubeIframe, a[t].appendChild(e)
-});</script>
+</script>
 <script defer="" src="./index_files/autoptimize_2c7d3d34c6c18306ec7e568cc71fe42a.js.download"
         type="text/javascript"></script>
 
