--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                             </div>
                         </div>
                         <hr class="wp-block-separator has-css-opacity is-style-wide">
-                        <h2 class="wp-block-heading pt-0">Organizers</h2>
+                        <h2 class="wp-block-heading pt-0">Organizers & Contact</h2>
                         <div id="wp-block-themeisle-blocks-advanced-columns-3e3b0751"
                              class="wp-block-themeisle-blocks-advanced-columns has-2-columns has-desktop-equal-layout has-tablet-equal-layout has-mobile-collapsedRows-layout has-vertical-unset">
                             <div class="wp-block-themeisle-blocks-advanced-columns-overlay"></div>
@@ -319,11 +319,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="wp-block-themeisle-blocks-advanced-columns-7424f2aa"
+                        <div id="wp-block-themeisle-blocks-advanced-columns-7424f2aa2"
                              class="wp-block-themeisle-blocks-advanced-columns has-2-columns has-desktop-equal-layout has-tablet-equal-layout has-mobile-collapsedRows-layout has-vertical-unset">
                             <div class="wp-block-themeisle-blocks-advanced-columns-overlay"></div>
                             <div class="innerblocks-wrap">
-                                <div id="wp-block-themeisle-blocks-advanced-column-25726110"
+                                <div id="wp-block-themeisle-blocks-advanced-column-257261102"
                                      class="wp-block-themeisle-blocks-advanced-column">
                                     <div class="wp-block-image is-style-rounded">
                                         <figure class="alignleft size-thumbnail"><img width="150" height="150"
@@ -338,8 +338,22 @@
                                                 href="https://www.linkedin.com/in/christian-abegg-851681214/">LinkedIn</a>
                                     </p>
                                 </div>
+                                <div id="wp-block-themeisle-blocks-advanced-column-6b55a8e72"
+                                     class="wp-block-themeisle-blocks-advanced-column">
+                                    <div class="wp-block-image is-style-rounded">
+                                        <figure class="alignleft size-thumbnail"><img width="150" height="150"
+                                                                                      src="./index_files/contact.png"
+                                                                                      class="wp-image-4475"
+                                        style="border: solid; border-color: rgb(31, 121, 172)"/></figure>
+                                    </div>
+                                    <p><strong>Contact</strong><br>
+                                        Questions?<br>
+                                        <a href="mailto:andrew.mossop+zurihack@gmail.com">Send us an email</a><br>
+                                    </p>
+                                </div>
                             </div>
-                        </div>
+                            </div>
+
                     </div>
                 </div>
             </div>
