--- a/index.html
+++ b/index.html
@@ -206,14 +206,14 @@
                                                 <figure class="aligncenter size-full is-resized"><a
                                                         href="https://sparkitconsulting.ch/"><img
                                                         decoding="async" loading="lazy" width="200"
-                                                        src="./index_files/sponsor_sparkit.jpeg"
+                                                        src="./index_files/sponsor_sparkit.png"
                                                         alt="SparkIT Logo"
                                                         class="wp-image-4367 lazyloaded"
                                                         style="width:200px"
                                                         data-ll-status="loaded">
                                                     <noscript><img decoding="async"
                                                                    loading="lazy" width="200"
-                                                                   src="./index_files/sponsor_sparkit.jpeg"
+                                                                   src="./index_files/sponsor_sparkit.png"
                                                                    alt="SparkIT Logo"
                                                                    class="wp-image-4367"
                                                                    style="width:200px"/></noscript>
