--- a/index.html
+++ b/index.html
@@ -82,8 +82,6 @@
             <div class="row">
                 <div class="nv-single-page-wrap col">
                     <div class="nv-content-wrap entry-content">
-
-
                         <div id="wp-block-themeisle-blocks-advanced-columns-5b4d8a17"
                              class="wp-block-themeisle-blocks-advanced-columns has-1-columns has-desktop-equal-layout has-tablet-equal-layout has-mobile-equal-layout has-vertical-unset has-light-bg">
                             <div class="wp-block-themeisle-blocks-advanced-columns-overlay"></div>
@@ -145,30 +143,41 @@
 
                         <h2 class="wp-block-heading has-text-color" style="color:#004880">Challenges</h2>
 
-                        <p>Challenges will be defined around the following areas:</p>
+                        <h3>Challenge 1</h3>
+                        <p>
+                            Make a real-life website more sustainable by applying the <a href="https://w3c.github.io/sustyweb/">Web Sustainability Guidelines</a> and the <a href="https://www.w3.org/TR/WCAG21/">Web Content Accessibility Guidelines</a>.
+                            How can you achieve the most impact in the given scenario?
+                            Get support from <a href="https://www.linkedin.com/in/mastalerzlukasz/">Łukasz Mastalerz</a> of the Sustainable Web Design Community Group of the W3C.
+                        </p>
 
-                        <div id="wp-block-themeisle-blocks-advanced-columns-a5014ab4" class="wp-block-themeisle-blocks-advanced-columns has-4-columns has-desktop-equal-layout has-tablet-equal-layout has-mobile-collapsedRows-layout has-vertical-unset"><div class="wp-block-themeisle-blocks-advanced-columns-overlay"></div><div class="innerblocks-wrap">
-                            <div id="wp-block-themeisle-blocks-advanced-column-5853a49d" class="wp-block-themeisle-blocks-advanced-column">
-                                <div id="wp-block-themeisle-blocks-font-awesome-icons-4c13765f" class="wp-block-themeisle-blocks-font-awesome-icons ticss-challenges"><span class="wp-block-themeisle-blocks-font-awesome-icons-container"><img src="./index_files/challenge_factory.png" alt="challenge"></span></div>
-                                <h4 class="wp-block-heading has-text-align-center pt-0 has-neve-link-color-color has-text-color"><strong>Business Culture &amp; </strong><br><strong>Behavior Change</strong></h4>
-                                <p class="has-text-align-center">We want businesses to prioritize climate issues and embed sustainability requirements into the day-to-day work of all employees.</p>
+                        <h3>Areas</h3>
+                        <p>In general, challenges will be defined around the following areas:</p>
+
+                        <div id="wp-block-themeisle-blocks-advanced-columns-a5014ab4" class="wp-block-themeisle-blocks-advanced-columns has-4-columns has-desktop-equal-layout has-tablet-equal-layout has-mobile-collapsedRows-layout has-vertical-unset">
+                            <div class="wp-block-themeisle-blocks-advanced-columns-overlay"></div>
+                            <div class="innerblocks-wrap">
+                                <div id="wp-block-themeisle-blocks-advanced-column-5853a49d" class="wp-block-themeisle-blocks-advanced-column">
+                                    <div id="wp-block-themeisle-blocks-font-awesome-icons-4c13765f" class="wp-block-themeisle-blocks-font-awesome-icons ticss-challenges"><span class="wp-block-themeisle-blocks-font-awesome-icons-container"><img src="./index_files/challenge_factory.png" alt="challenge"></span></div>
+                                    <h4 class="wp-block-heading has-text-align-center pt-0 has-neve-link-color-color has-text-color"><strong>Business Culture &amp; </strong><br><strong>Behavior Change</strong></h4>
+                                    <p class="has-text-align-center">We want businesses to prioritize climate issues and embed sustainability requirements into the day-to-day work of all employees.</p>
+                                </div>
+                                <div id="wp-block-themeisle-blocks-advanced-column-2b320bfc" class="wp-block-themeisle-blocks-advanced-column">
+                                    <div id="wp-block-themeisle-blocks-font-awesome-icons-68159d0f" class="wp-block-themeisle-blocks-font-awesome-icons ticss-challenges"><span class="wp-block-themeisle-blocks-font-awesome-icons-container"><img src="./index_files/challenge-code.png" alt="challenge"></span></div>
+                                    <h4 class="wp-block-heading has-text-align-center pt-0 has-neve-link-color-color has-text-color"><strong>Green Software <br>Engineering</strong></h4>
+                                    <p class="has-text-align-center">Software engineers can make decisions which reduce the carbon pollution of their applications.</p>
+                                </div>
+                                <div id="wp-block-themeisle-blocks-advanced-column-6bb25b4a" class="wp-block-themeisle-blocks-advanced-column">
+                                    <div id="wp-block-themeisle-blocks-font-awesome-icons-690bece1" class="wp-block-themeisle-blocks-font-awesome-icons ticss-challenges"><span class="wp-block-themeisle-blocks-font-awesome-icons-container"><img src="./index_files/challenge-circle.png" alt="challenge"></span></div>
+                                    <h4 class="wp-block-heading has-text-align-center pt-0 has-neve-link-color-color has-text-color"><strong>Sustainable Product </strong><br><strong>Design</strong></h4>
+                                    <p class="has-text-align-center">We can change the product design process to reduce upstream and downstream emissions.</p>
+                                </div>
+                                <div id="wp-block-themeisle-blocks-advanced-column-14d98951" class="wp-block-themeisle-blocks-advanced-column">
+                                    <div id="wp-block-themeisle-blocks-font-awesome-icons-7f5f9fdc" class="wp-block-themeisle-blocks-font-awesome-icons ticss-challenges"><span class="wp-block-themeisle-blocks-font-awesome-icons-container"><img src="./index_files/challenge-network.png" alt="challenge"></span></div>
+                                    <h4 class="wp-block-heading has-text-align-center pt-0 has-neve-link-color-color has-text-color"><strong>Low-Carbon <br>Infrastructure</strong></h4>
+                                    <p class="has-text-align-center">While we transition to renewable energy, we can align compute load with low-carbon energy.</p>
+                                </div>
                             </div>
-                            <div id="wp-block-themeisle-blocks-advanced-column-2b320bfc" class="wp-block-themeisle-blocks-advanced-column">
-                                <div id="wp-block-themeisle-blocks-font-awesome-icons-68159d0f" class="wp-block-themeisle-blocks-font-awesome-icons ticss-challenges"><span class="wp-block-themeisle-blocks-font-awesome-icons-container"><img src="./index_files/challenge-code.png" alt="challenge"></span></div>
-                                <h4 class="wp-block-heading has-text-align-center pt-0 has-neve-link-color-color has-text-color"><strong>Green Software <br>Engineering</strong></h4>
-                                <p class="has-text-align-center">Software engineers can make decisions which reduce the carbon pollution of their applications.</p>
-                            </div>
-                            <div id="wp-block-themeisle-blocks-advanced-column-6bb25b4a" class="wp-block-themeisle-blocks-advanced-column">
-                                <div id="wp-block-themeisle-blocks-font-awesome-icons-690bece1" class="wp-block-themeisle-blocks-font-awesome-icons ticss-challenges"><span class="wp-block-themeisle-blocks-font-awesome-icons-container"><img src="./index_files/challenge-circle.png" alt="challenge"></span></div>
-                                <h4 class="wp-block-heading has-text-align-center pt-0 has-neve-link-color-color has-text-color"><strong>Sustainable Product </strong><br><strong>Design</strong></h4>
-                                <p class="has-text-align-center">We can change the product design process to reduce upstream and downstream emissions.</p>
-                            </div>
-                            <div id="wp-block-themeisle-blocks-advanced-column-14d98951" class="wp-block-themeisle-blocks-advanced-column">
-                                <div id="wp-block-themeisle-blocks-font-awesome-icons-7f5f9fdc" class="wp-block-themeisle-blocks-font-awesome-icons ticss-challenges"><span class="wp-block-themeisle-blocks-font-awesome-icons-container"><img src="./index_files/challenge-network.png" alt="challenge"></span></div>
-                                <h4 class="wp-block-heading has-text-align-center pt-0 has-neve-link-color-color has-text-color"><strong>Low-Carbon <br>Infrastructure</strong></h4>
-                                <p class="has-text-align-center">While we transition to renewable energy, we can align compute load with low-carbon energy.</p>
-                            </div>
-                        </div></div>
+                        </div>
 
                         <hr class="wp-block-separator has-css-opacity is-style-wide">
                         <div id="wp-block-themeisle-blocks-advanced-columns-b879b49c"
