--- a/index.html
+++ b/index.html
@@ -143,11 +143,24 @@
 
                         <h2 class="wp-block-heading has-text-color" style="color:#004880">Challenges</h2>
 
-                        <h3>Challenge 1</h3>
+                        <h3>Challenge "Web"</h3>
                         <p>
                             Make a real-life website more sustainable by applying the <a href="https://w3c.github.io/sustyweb/">Web Sustainability Guidelines</a> and the <a href="https://www.w3.org/TR/WCAG21/">Web Content Accessibility Guidelines</a>.
                             How can you achieve the most impact in the given scenario?
                             Get support from <a href="https://www.linkedin.com/in/mastalerzlukasz/">Łukasz Mastalerz</a> of the Sustainable Web Design Community Group of the W3C.
+                        </p>
+
+                        <h3>Challenge "IT Inventory"</h3>
+                        <p>
+                            Suggest strategies for a company to reduce the footprint of IT Hardware. 
+                            Validate your suggestion running a simulation with real-life inventory data. 
+                            Get support from the experts at <a href="https://resilio-solutions.com/">Resilio</a>.
+                        </p>
+
+                        <h3>Challenge "Impact Framework"</h3>
+                        <p>
+                            Improve the <a href="https://if.greensoftware.foundation/">impact framework</a> of the <a href="https://greensoftware.foundation/">Green Software Foundation</a> by developing a new or extending an existing plugin. 
+                            Get support from the inventors of the framework directly.
                         </p>
 
                         <h3>Areas</h3>
