add servicenow sponsor

--- a/index.html
+++ b/index.html
@@ -267,6 +267,10 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div style="text-align: center;">
+                                        <a href="https://www.servicenow.com/"><img src="./index_files/sn-logo-color.avif" width="400px"></a><br />
+                                        <a href="https://www.servicenow.com/">ServiceNow</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
