Sustainable Product Design

--- a/index.html
+++ b/index.html
@@ -163,6 +163,13 @@
                             Get support from the inventors of the framework directly.
                         </p>
 
+                        <h3>Challenge "Sustainable Product Design"</h3>
+                        <p>
+                            Waste from Electrical and Electronic Equipment (WEEE) is a major problem in the industry. 
+                            What if you could redesign everything? What would you do differently?
+                            Use principles of circular design to address this problem with support from our team. 
+                        </p>
+
                         <h3>Areas</h3>
                         <p>In general, challenges will be defined around the following areas:</p>
 
