--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
                         <p>
                             Waste from Electrical and Electronic Equipment (WEEE) is a major problem in the industry. 
                             What if you could redesign everything? What would you do differently?
-                            Use principles of circular design to address this problem with support from our team. 
+                            Use principles of circular design (i.e. 
+                            <a href="https://www.ellenmacarthurfoundation.org/circular-design-guide/">Ellen McArthur Circular Design Guide</a>, 
+                            <a href="https://publications.vtt.fi/julkaisut/muut/2022/Data-driven_circular_design.pdf">Data-driven circular design</a>) to address this problem with support from our team. 
                         </p>
 
                         <h3>Areas</h3>
