--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                     </p>
 
                                     <div class="wp-block-themeisle-blocks-button-group wp-block-buttons align-center">
-                                        <div style="text-align:center"><a href="https://docs.google.com/forms/d/12S4gDfbSvlHndt3I8AFImjEUKbkGZLGkEBl-BsC01m8/viewform" target="_self" rel="noopener noreferrer" class="wp-block-button__link"><span>REGISTER NOW</span></a></div>
+                                        <div style="text-align:center">REGISTRATION CLOSED</div>
                                     </div>
                                 </div>
 
