--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
 
                                     <div class="wp-block-themeisle-blocks-button-group wp-block-buttons align-center">
                                         <div style="text-align:center">REGISTRATION OPENS SOON</div>
+                                        <div style="text-align:center">Follow our <a href="https://www.linkedin.com/company/zurichhack-climateaction-tech">LinkedIn page</a> to get updates</div>
+
+
                                     </div>
                                 </div>
 
@@ -382,6 +385,7 @@
                                     <p><strong>Contact</strong><br>
                                         Questions?<br>
                                         <a href="mailto:rekwall+zurihack@gmail.com">Send us an email</a><br>
+                                        <a href="https://www.linkedin.com/company/zurichhack-climateaction-tech">LinkedIn</a><br>
                                     </p>
                                 </div>
                             </div>
