add register now link

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                     </p>
 
                                     <div class="wp-block-themeisle-blocks-button-group wp-block-buttons align-center">
-                                        <div style="text-align:center">REGISTRATION OPENS SOON</div>
+                                        <div style="text-align:center"><a href="https://docs.google.com/forms/d/e/1FAIpQLScRg-VpQl4BqYotvaqP9aj8t2QNQBYIkBYyIITccNsIP2aH9w/viewform">REGISTER NOW</a></div>
                                         <div style="text-align:center">Follow our <a href="https://www.linkedin.com/company/zurichhack-climateaction-tech">LinkedIn page</a> to get updates</div>
 
 
