--- a/index.html
+++ b/index.html
@@ -90,13 +90,11 @@
                             <div class="innerblocks-wrap">
                                 <div id="wp-block-themeisle-blocks-advanced-column-78e22ec1"
                                      class="wp-block-themeisle-blocks-advanced-column">
-                                    <h1 id="wp-block-themeisle-blocks-advanced-heading-56ed8174"
-                                        class="wp-block-themeisle-blocks-advanced-heading wp-block-themeisle-blocks-advanced-heading-56ed8174 ticss-2a7c0ae5">
-                                        <strong>Zürich Hackathon<br>Climate Action Tech</strong></h1>
+                                    <div style="text-align:center"><img src="./index_files/Blue_400x400.png" alt="Zürich Hackathon Climate Action Tech"/></div>
                                     <h2 id="wp-block-themeisle-blocks-advanced-heading-b3c1c1a7"
                                         class="wp-block-themeisle-blocks-advanced-heading wp-block-themeisle-blocks-advanced-heading-b3c1c1a7 ticss-aca65f60">
                                         23rd May 2025<br>
-                                        8:00-18:00<br>
+                                        8:00 - 18:00<br>
                                         Zürich</h2>
                                     <hr
                                             class="wp-block-separator has-text-color has-neve-link-color-color has-css-opacity has-neve-link-color-background-color has-background is-style-default">
